# med-z1

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  config.py  cookies_alpha.txt  diagnose_duplicates.py  docker-compose.yaml  minio_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_parquet_read.py  test_vault_manual.py
ai/: README.md
ai/agents/: insight_agent.py
ai/prompts/: __init__.py  suggested_questions.py  system_prompts.py
ai/services/: __init__.py  ddi_analyzer.py  patient_context.py  vitals_trend_analyzer.py
ai/tools/: __init__.py  family_history_tools.py  medication_tools.py  notes_tools.py  patient_tools.py  test_tools.py  vitals_tools.py
app/: README.md  main.py
app/db/: auth.py  encounters.py  labs.py  medications.py  military_history.py  notes.py  patient.py  patient_allergies.py  patient_family_history.py  patient_flags.py  patient_immunizations.py  patient_problems.py  patient_tasks.py  vitals.py
app/middleware/: auth.py
app/routes/: auth.py  dashboard.py  demographics.py  encounters.py  family_history.py  immunizations.py  insight.py  labs.py  medications.py  notes.py  patient.py  problems.py  tasks.py  vitals.py
app/services/: PHASE2_COMPLETE.md  ddi_loader.py  realtime_overlay.py  test_vista_manual.py  vista_cache.py  vista_client.py  vista_client_example.py
app/static/: app.js  styles.css  transcript.js  vitals.js
app/templates/: allergies.html  base.html  dashboard.html  htmx.html  index.html  insight.html  login.html  patient_demographics.html  patient_encounters.html  patient_family_history.html  patient_immunizations.html  patient_labs.html  patient_medications.html  patient_notes.html  patient_problems.html  patient_tasks.html  patient_test.html  patient_vitals.html  timer.html
app/tests/: test_realtime_overlay.py  test_vista_client.py
app/utils/: ccow_client.py  template_context.py
ccow/: README.md  __init__.py  auth_helper.py  main.py  models.py  vault.py
db/ddl/: alter_patient_encounters_add_location_names.sql  create_ai_checkpoints_tables.sql  create_auth_tables.sql  create_patient_allergies_tables.sql  (+15 more)
docs/: CHANGELOG-2025-12-16.md  DOCUMENTATION-UPDATE-SUMMARY.md  allergies-design.md  allergies-research-gemini.md  architecture.md  auth-implementation-summary.md  ccow-context-vault-design.md  ccow-design-chatgpt.md  ccow-design-gemini.md  ccow-v2-implementation-summary.md  ccow-vault-design.md  cdwwork2-design.md  data-currency-strategy.md  demographics-design.md  demographics-enhancement-design.md  encounters-design.md  encounters-research.md  implementation-roadmap.md  insomnia-ccow-collection.json  lab-results-design.md  lab-results-research.md  med-z1-plan.md  medications-design.md  medz1-design-assessment.md  mock-users.md  patient-dashboard-design.md  patient-flags-design.md  patient-flags-research-a.md  patient-flags-research-b.md  patient-flags-research.md  patient-topbar-design.md  patient-topbar-redesign-spec.md  session-timeout-behavior.md  user-auth-design-updates.md  user-management-research.md  vista-rpc-broker-design.md  vista-rpc-broker-research.md  vista-rpc-manual-testing.md  vitals-design.md  vitals-research-gemini.md
etl/: README.md  bronze_allergen.py  bronze_allergy_severity.py  bronze_cdwwork2_encounters.py  bronze_cdwwork2_immunizations.py  bronze_cdwwork2_vitals.py  bronze_clinical_notes_vista.py  bronze_ddi.py  bronze_family_history.py  bronze_immunizations.py  bronze_inpatient.py  bronze_insurance_company.py  bronze_labs.py  bronze_medications.py  bronze_patient.py  bronze_patient_address.py  bronze_patient_allergy.py  bronze_patient_allergy_reaction.py  bronze_patient_disability.py  bronze_patient_flags.py  bronze_patient_insurance.py  bronze_patient_phone.py  bronze_problems.py  bronze_reaction.py  bronze_vitals.py  gold_clinical_notes.py  gold_ddi.py  gold_family_history.py  gold_immunizations.py  gold_inpatient.py  gold_labs.py  gold_patient.py  gold_patient_allergies.py  gold_patient_flags.py  gold_patient_medications.py  gold_patient_military_history.py  gold_problems.py  gold_vitals.py  load_clinical_notes.py  load_ddi.py  (+24 more)
lake/: minio_client.py
mcp_servers/: README.md  clinical_decision_support_server.py
mcpsvr/: README.md  __init__.py  clinical_decision_support_server.py  ehr_server.py
mock/: README.md
notebook/: README.md
scripts/: analyze_sig_coverage.py  analyze_vista_vitals.py  check_bcma_source_icn100004.py  check_bmi_flags.py  check_icn100004_inpatient.py  debug_ccow_session.py  diagnose_medications_linux.sql  extract_missing_drugs.py  find_local_drug_mismatches.py  fix_alananah_allergy_sids.py  fix_alananah_patient_flags.py  fix_alananah_sql_errors.py  fix_alananah_vitals_complete.py  fix_rxoutpat_local_drug_sids.py  fix_thompson_columns.sh  fix_thompson_schemas.py  fix_thompson_schemas_comprehensive.py  generate_joe_comprehensive.py  generate_joe_full.py  generate_password_hash.py  generate_thompson_joe_corrected.py  insert_alananah_only.sh  load_ddi_reference.py  run_all_etl.sh  test_agent_with_vitals.py  test_ai_military_context.py  test_cdwwork2_identity.sql  test_conversation_memory.py  test_cookie_forwarding.py  test_ddi_with_real_data.py  test_filter_endpoint_direct.py  test_notes_widget.py  test_patient_summary.py  test_patient_tasks_api.py  test_patient_tasks_db.sql  test_problem_detail_endpoint.py  test_problems_api.py  test_problems_vista_cache.py  test_problems_vista_merge.py  test_vitals_data_source.py  (+10 more)
test/: test_agent_skeleton.py  test_ai_problems_context.py  test_api_multiuser.py  test_auth_flow.py  test_auth_functions.py  test_ddi_analyzer.py  test_ddi_tool_with_agent.py  test_ddi_with_real_data.py  test_immunizations_filter.py  test_medications_query.py  test_notes_api.py  test_patient_tasks_query_layer.py  test_problems_queries.py  test_problems_vista_refresh.py  test_vault_multiuser.py
vista/: README.md  TESTING_GUIDE.md
(+352 files in other folders)
